# KoTR_ASI_Plugins

./: README.md
KoTR_CabinCamMod/: KoTR_CabinCamMod.ini  dllmain.cpp
KoTR_CabinCamMod/Port_from_5.5/: dllmain.cpp
KoTR_ClassicPhysics/: KoTR_ClassicPhysics.ini  KoTR_ClassicPhysics.sln  README.md
KoTR_ClassicPhysics/AsiPlugin/: AsiPlugin.vcxproj  AsiPlugin.vcxproj.filters  dllmain.cpp
KoTR_ClassicRainGlassEffect/: README.md  dllmain.cpp
KoTR_ClutchMod/: README.md  dllmain.cpp
KoTR_FPS_Limiter/: KoTR_FPS_Limiter.ini  README.md
KoTR_FPS_Limiter/AsiPlugin/: AsiPlugin.vcxproj  AsiPlugin.vcxproj.filters  dllmain.cpp
KoTR_FPS_Limiter/AsiPlugin/sources/: dllmain.cpp
KoTR_GUI_mod/: README.md  dllmain.cpp
KoTR_HelicoptersMod/: INFO.md  KoTR_HelicoptersMod.ini  README.md  dllmain.cpp
KoTR_InputMod/: KoTR_InputMod.ini  README.md  dllmain.cpp
KoTR_IntroMod/: KoTR_IntroMod.ini  README.md
KoTR_IntroMod/AsiPlugin/: AsiPlugin.vcxproj  AsiPlugin.vcxproj.filters
KoTR_IntroMod/AsiPlugin/sources/: dllmain.cpp
KoTR_ModuleLoader/: INFO.md  dllmain.cpp
KoTR_RainMod/: README.md
KoTR_RoadtrainFunc/: INFO.md
KoTR_SirenMod/: README.md  dllmain.cpp
KoTR_SoundMod/: README.md
KoTR_SoundMod/RnR_Classic_version/: KoTR_SoundMod.ini  dllmain.cpp
KoTR_SoundMod/SEMod_version/: KoTR_SoundMod.ini  dllmain.cpp
KoTR_SoundMod/SEMod_version_for_clean_game/: dllmain.cpp
KoTR_SpeedFineMod/: KoTR_SpeedFineMod.ini  README.md
KoTR_SpeedFineMod/AsiPlugin/: CMakeLists.txt  CMakePresets.json  SpeedFineMod_x86.S  dllmain.cpp  sigscan.h  toolchain-mingw.cmake
KoTR_SpeedFineMod/AsiPlugin/compat/: Psapi.h  Windows.h
KoTR_TabloMod/: KoTR_TabloMod.ini  README.md  dllmain.cpp
KoTR_UpgradesMod/: KoTR_UpgradesMod.ini  README.md
KoTR_VehicleListMod/: README.md  dllmain.cpp
KoTR_ZoomMod/: README.md  dllmain.cpp
(+6 files in other folders)
